--- a/style.css
+++ b/style.css
@@ -4,3 +4,37 @@
     padding: 0;
 }
 
+#container {
+    align-items: center;
+    display: flex;
+    height: 100%;
+    margin: 0 auto;
+    justify-content: center;
+    width: 90%;
+}
+
+#nav-container {
+    align-items: center;
+    display: flex;
+    height: 100%;
+    margin: 0 auto;
+    justify-content: space-between;
+    width: 90%;
+}
+
+.nav-bar {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 45px;
+    background-color: aquamarine;
+}
+.nav-items {
+    list-style: none;
+}
+
+.nav-items a {
+    color: #000000;
+    text-decoration: none;
+}
