--- a/style.css
+++ b/style.css
@@ -1,139 +1,13 @@
-* {
+*, *::after, *::before {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-
 }
 
-html, body {
-    background-color: #FFF9FB;
-    font-family: 'Open Sans', sans-serif;
-    height: 100%;
-    width: 100%;
-}
-
-#container {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    margin: 0 auto;
-    justify-content: center;
-    width: 90%;
-}
-
-.nav-bar {
-    align-items: center;
-    background-color: #252627;
-    color: #D3D4D9;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    height: 70px;
-    -webkit-box-shadow: -1px 7px 20px -3px rgba(0,0,0,0.54); 
-    box-shadow: -1px 7px 20px -3px rgba(0,0,0,0.54);
-}
-
-.nav-bar span {
-    font-weight: 700;
-    font-size: 2.5rem;
-    text-transform: uppercase;
-}
-
-.scoreboard{
+.game-container {
     align-items: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 50px;
-    text-align: center;
-    text-transform: uppercase;
-    width: 70%;
-}
-
-.scores {
-    align-items: center;
-    display: flex;
-    font-weight: 700;
-    justify-content: space-between;
-    padding: 30px;
-    text-align: center;
-    width: 50%;
-}
-
-
-.game-button-container {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    padding: 50px;
-    width: 100%;
-}
-
-.userChoice {
-    align-items: center;
-    background-color: #D3D4D9;
-    border: none;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    font-weight: 700;
-    height: 200px;
-    justify-content: center;
-    margin: 50px;
-    text-transform: uppercase;
-}
-
-.rock:hover {
-    background-color: #4B88A2;
-}
-
-.paper:hover {
-    background-color: #4B88A2;
-}
-
-.scissors:hover {
-    background-color: #4B88A2;
-}
-
-.rock p {
-    padding: 10px;
-    text-align: center;
-}
-
-.paper p {
-    padding: 10px;
-}
-
-.scissors p {
-    padding: 10px;
-}
-
-svg {
-    height: auto;
-    width: 30%;
-}
-
-footer {
-    display: flex;
-    padding: 22px;
-}
-
-footer #container{
-    flex-direction: row;
-    width: 100%;
-}
-
-footer p{
-    padding: 10px;
-}
-.github-svg {
-    height: auto;
-    width: 30px;
-    transition: transform .9s ease-in-out;
-}
-
-.github-svg:hover {
-   fill: #BB0A21;
-   transform: rotate(360deg);
+    padding: 1em;
 }
