--- a/style.css
+++ b/style.css
@@ -4,10 +4,41 @@
     padding: 0;
 }
 
-.game-container {
+body {
     align-items: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 1em;
+}
+
+.game-title {
+    text-align: center;
+    margin-bottom: 1em;
+}
+
+.game-display {
+    align-content: center;
+    display: flex;
+    height: 25em;
+    justify-content: center;
+    width: auto;
+    margin-bottom: 4em;
+}
+
+.game-selection {
+    display: grid;
+    grid-template-columns: repeat(3, 10em);
+    grid-auto-rows: 5em;
+    gap: 2em;
+}
+
+
+.game-button {
+    align-content: center;
+    background-color: #131313;
+    color: #FFFFFF;
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
