--- a/style.css
+++ b/style.css
@@ -57,18 +57,33 @@ body {
 
 .alert-container {
     align-items: center;
+    background-color: #131313;
     display: flex;
+    flex-direction: column;
+    position: fixed;
     justify-content: center;
+    transform: translateX(35%);
 }
 
 .alert {
     align-items: center;
     color: white;
     display: flex;
-    background-color: #131313;
     height: 15em;
     pointer-events: none;
     justify-content: center;
     width: 20em;
+}
+
+.play-again {
+    align-items: center;
+    background-color: #FFFFFF;
+    border-radius: .25em;
+    display: flex;
+    height: 1.5em;
+    justify-content: center;
+    width: 5em;
+    margin-top: 5em;
+    text-align: center;
 }
 
