--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ body {
     color: #FFFFFF;
     display: flex;
     font-size: 1.5em;
+    font-weight: 800;
     flex-direction: column;
     justify-content: center;
     text-align: center;
